# MarketScope

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
docs/: GUIDE.md  national_stats_mcp_integration.md  phase1_plan.md  plan.md
docs/superpowers/specs/: 2026-03-30-three-agent-pipeline-design.md
src/: analyzer.py  search_service.py
src/agent/: executor.py  pipeline.py
src/agent/prompts/: analyst.py  reporter.py  researcher.py
src/agent/tools/: national_stats_tools.py  registry.py  search_tools.py
tests/: README.md  conftest.py  test_config.py  test_e2e_pipeline.py  test_pipeline.py  test_prompt_quality.py  test_search_provider.py  test_search_service.py  test_tool_contracts.py  test_tool_registry.py
